--- a/Levantamento de Perdas/Src/Usinagem_Eixo_Secund%e1rio.fx.yaml
+++ b/Levantamento de Perdas/Src/Usinagem_Eixo_Secund%e1rio.fx.yaml
@@ -4,7 +4,7 @@ Usinagem_Eixo_Secundário As screen:
 
     Image3_3 As image:
         Height: =967
-        Image: ='Usinagem_Eixo_Secundário_1'
+        Image: =Usinagem_Eixo_Secundário_1
         ImagePosition: =ImagePosition.Stretch
         Width: =640
         Y: =168
