--- a/Levantamento de Perdas/Src/Usinagem_Eixo_Prim%e1rio.fx.yaml
+++ b/Levantamento de Perdas/Src/Usinagem_Eixo_Prim%e1rio.fx.yaml
@@ -4,7 +4,7 @@ Usinagem_Eixo_Primário As screen:
 
     Image3_2 As image:
         Height: =967
-        Image: ='Usinagem_Eixo_Primário_1'
+        Image: =Usinagem_Eixo_Primário_1
         ImagePosition: =ImagePosition.Stretch
         Width: =640
         Y: =168
