--- a/Levantamento de Perdas/CanvasManifest.json
+++ b/Levantamento de Perdas/CanvasManifest.json
@@ -127,6 +127,8 @@
     "Suporte_União_2914",
     "Usinagem_Eixo_Primário",
     "Usinagem_Eixo_Secundário",
-    "Usinagem_Coroa_Cilíndrica"
+    "Usinagem_Coroa_Cilíndrica",
+    "Usinagem_Engr_1ª",
+    "Usinagem_Engr_2ª"
   ]
 }
