--- a/Levantamento de Perdas/Src/Usinagem_Coroa_Cil%edndrica.fx.yaml
+++ b/Levantamento de Perdas/Src/Usinagem_Coroa_Cil%edndrica.fx.yaml
@@ -4,7 +4,7 @@ Usinagem_Coroa_Cilíndrica As screen:
 
     Image3_4 As image:
         Height: =967
-        Image: ='Usinagem_Coroa_Cilíndrica_1'
+        Image: =Usinagem_Coroa_Cilíndrica_1
         ImagePosition: =ImagePosition.Stretch
         Width: =640
         Y: =168
