--- a/Levantamento de Perdas/Src/Usinagem_Engr_1%aa_2%aa.fx.yaml
+++ b/Levantamento de Perdas/Src/Usinagem_Engr_1%aa_2%aa.fx.yaml
@@ -1,10 +1,10 @@
-Usinagem_Engr_2ª As screen:
+Usinagem_Engr_1ª_2ª As screen:
     BackgroundImage: =Transmissões_foto_bw
     ImagePosition: =ImagePosition.Fill
 
     Image3_6 As image:
         Height: =967
-        Image: ='Usinagem_Engrenagem_2ª'
+        Image: =Usinagem_Engrenagem_2ª
         ImagePosition: =ImagePosition.Stretch
         Width: =640
         Y: =168
