--- a/Levantamento de Perdas/Src/App.fx.yaml
+++ b/Levantamento de Perdas/Src/App.fx.yaml
@@ -1,6 +1,6 @@
 App As appinfo:
     BackEnabled: =false
-    OnStart: |
+    OnStart: |-
         =Set(
             varDelegationLimit,
             1000
@@ -57,8 +57,7 @@ App As appinfo:
          { Role: "Engr._CDTs_3ª_e_4ª";Screen: Engr._CDTs_3ª_e_4ª };
          { Role: "Eixo_primário_e_secundário";Screen: Eixo_primário_e_secundário }; */
         
-         { Role: "Usinagem_Engr_2ª",Screen: Usinagem_Engr_2ª },
-         { Role: "Usinagem_Engr_1ª",Screen: Usinagem_Engr_1ª  },
+         { Role: "Usinagem_Engr_1ª/2ª",Screen: Usinagem_Engr_1ª_2ª },
          { Role: "Usinagem_Eixo_Secundário",Screen: Usinagem_Eixo_Secundário },
          { Role: "Usinagem_Eixo_Primário",Screen: Usinagem_Eixo_Primário },
          { Role: "Usinagem_Coroa_Cilíndrica",Screen: Usinagem_Coroa_Cilíndrica },
@@ -66,4 +65,5 @@ App As appinfo:
          { Role: "Caixa_Câmbio_2914", Screen: Caixa_Câmbio_2914 }
             )
         );
+        // { Role: "Usinagem_Engr_1ª";Screen: Usinagem_Engr_1ª  };
 
